Updated to use Spring KoFu 0.5.0

--- a/src/main/resources/templates/messages.mustache
+++ b/src/main/resources/templates/messages.mustache
@@ -2,7 +2,7 @@
 
 <ul>
 {{#messages}}
-    <li>Message {{id}}: {{created_timestamp}} From: {{sender_login}} To: {{recipient_login}} Text: {{message}}</li>
+    <li>{{created_timestamp}}   From: {{sender_login}} To: {{recipient_login}} Text: {{message}}</li>
 {{/messages}}
 </ul>
 
